@startuml 熙心健康体检平台模块类图
' 设置样式
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 100
skinparam classFontSize 14
skinparam classAttributeFontSize 11
skinparam defaultFontSize 12

title 熙心健康体检平台 - 模块类图

' ========== 用户管理模块 ==========
package "用户管理" as user_pkg #LightBlue {
    class User {
        -Long id
        -String userNo
        -String name
        -String phone
        -String passwordHash
        -Integer authStatus
        -Integer isVip
        +login() bool
        +register() void
        +getInfo() User
        +updateInfo() void
    }
    
    class StaffAccount {
        -Long id
        -String username
        -String passwordHash
        -String displayName
        -Integer status
        +login() bool
        +getInfo() StaffAccount
        +updateStatus() void
    }
    
    class StaffRoleRel {
        -Long id
        -Long staffId
        -Long roleId
        -Integer status
        +assign() void
        +remove() void
    }
}

' ========== 预约管理模块 ==========
package "预约管理" as appt_pkg #LightGreen {
    class Appointment {
        -Long id
        -String appointmentNo
        -Long userId
        -Long packageId
        -String centerCode
        -LocalDate appointDate
        -String timeSlotCode
        -Integer status
        +create() Appointment
        +cancel() void
        +getDetail() Appointment
        +getAvailableSlots() List
    }
    
    class ExamPackage {
        -Long id
        -String packageCode
        -String packageName
        -String category
        -BigDecimal price
        -Integer status
        +getList() List
        +getDetail() ExamPackage
        +create() void
        +update() void
    }
    
    class ExamPackageItem {
        -Long id
        -Long packageId
        -String itemCode
        -String itemName
        -String departmentCode
        -Integer status
        +create() void
        +update() void
    }
    
    class ResourceCapacity {
        -Long id
        -String centerCode
        -LocalDate capacityDate
        -String timeSlotCode
        -Integer capacityTotal
        -Integer capacityUsed
        -Integer status
        +create() void
        +updateStatus() void
    }
}

' ========== 订单管理模块 ==========
package "订单管理" as order_pkg #LightYellow {
    class Order {
        -Long id
        -String orderNo
        -Long userId
        -Long appointmentId
        -Long packageId
        -BigDecimal totalAmount
        -BigDecimal discountAmount
        -BigDecimal payAmount
        -Integer status
        +create() Order
        +pay() void
        +refund() void
        +getDetail() Order
        +getList() List
    }
    
    class OrderItem {
        -Long id
        -Long orderId
        -Integer itemType
        -String refItemCode
        -String refItemName
        -Integer qty
        -BigDecimal unitPrice
        -BigDecimal amount
        +create() void
        +update() void
    }
    
    class PaymentRecord {
        -Long id
        -Long orderId
        -String paymentNo
        -BigDecimal amount
        -String payChannel
        -Integer status
        +create() void
        +queryStatus() PaymentRecord
    }
    
    class RefundApply {
        -Long id
        -Long orderId
        -String refundNo
        -BigDecimal refundAmount
        -String reason
        -Integer status
        +apply() RefundApply
        +audit() void
    }
}

' ========== 体检执行模块 ==========
package "体检执行" as exam_pkg #LightCoral {
    class ExamTask {
        -Long id
        -String taskNo
        -Long appointmentId
        -Long orderId
        -Long userId
        -Long packageId
        -Integer taskStatus
        -Integer reportStatus
        +generate() ExamTask
        +getDetail() ExamTask
        +getGuide() List
    }
    
    class ExamTaskItem {
        -Long id
        -String taskItemNo
        -Long taskId
        -String itemCode
        -String itemName
        -String departmentCode
        -Long doctorId
        -Integer itemStatus
        +start() void
        +complete() void
        +getDetail() ExamTaskItem
    }
    
    class ExamResult {
        -Long id
        -String resultNo
        -Long taskId
        -Long taskItemId
        -Long userId
        -String resultType
        -String resultValue
        -BigDecimal resultNumber
        -Integer isAbnormal
        -Integer abnormalLevel
        -Long entryDoctorId
        +create() ExamResult
        +getList() List
    }
    
    class ExamDepartmentRoute {
        -Long id
        -String departmentCode
        -String departmentName
        -Integer routeSort
        -Integer status
        +create() void
        +update() void
    }
}

' ========== 报告管理模块 ==========
package "报告管理" as report_pkg #Plum {
    class ExamReport {
        -Long id
        -String reportNo
        -Long appointmentId
        -Long taskId
        -Long userId
        -Long packageId
        -Long templateId
        -LocalDate reportDate
        -String overallConclusion
        -Integer status
        +generate() ExamReport
        +review() void
        +publish() void
        +withdraw() void
        +getDetail() ExamReport
        +getList() List
    }
    
    class ExamReportItem {
        -Long id
        -Long reportId
        -Long resultId
        -String itemCode
        -String itemName
        -String resultValue
        -Integer isAbnormal
        +create() void
        +getList() List
    }
    
    class DoctorReviewRecord {
        -Long id
        -Long reportId
        -Long doctorId
        -Integer reviewStatus
        -String reviewComment
        +create() void
        +getList() List
    }
    
    class ReportTemplate {
        -Long id
        -String templateCode
        -String templateName
        -Integer status
        +create() void
        +update() void
        +getList() List
    }
}

' ========== 咨询管理模块 ==========
package "咨询管理" as consult_pkg #LightPink {
    class DoctorConsultation {
        -Long id
        -String consultationNo
        -Long userId
        -Long doctorId
        -String doctorName
        -Long reportId
        -String consultationType
        -String consultationTitle
        -String consultationContent
        -Integer consultationStatus
        -Integer priorityLevel
        +create() DoctorConsultation
        +assign() void
        +close() void
        +getDetail() DoctorConsultation
        +getList() List
    }
    
    class DoctorConsultationReply {
        -Long id
        -Long consultationId
        -Long replyUserId
        -String replyContent
        -Integer replyType
        +create() void
        +getList() List
    }
}

' ========== 数据分析模块 ==========
package "数据分析" as analysis_pkg #LightCyan {
    class ReportCompareTask {
        -Long id
        -String taskNo
        -Long userId
        -Long baselineReportId
        -Long compareReportId
        -Integer status
        +create() ReportCompareTask
        +getDetail() ReportCompareTask
    }
    
    class ReportCompareResult {
        -Long id
        -Long taskId
        -String itemCode
        -String baselineValue
        -String compareValue
        -Integer changeType
        +create() void
        +getList() List
    }
    
    class HealthRiskScore {
        -Long id
        -Long taskId
        -Long userId
        -BigDecimal scoreTotal
        -BigDecimal scoreAbnormal
        -BigDecimal scoreTrend
        -Integer riskLevel
        +calculate() void
        +getList() List
    }
    
    class HealthAdviceRecord {
        -Long id
        -String adviceNo
        -Long userId
        -Long reportId
        -Long compareTaskId
        -String adviceType
        -Integer riskLevel
        -String adviceContent
        +create() void
        +getList() List
    }
}

' ========== 用户管理模块关系 ==========
User "1" -- "0..*" StaffAccount : 关联
StaffAccount "1" *-- "0..*" StaffRoleRel : 组合

' ========== 预约管理模块关系 ==========
Appointment "*" -- "1" ExamPackage : 选择套餐
ExamPackage "1" *-- "0..*" ExamPackageItem : 组合
Appointment "*" -- "1" ResourceCapacity : 占用时段

' ========== 订单管理模块关系 ==========
Order "1" *-- "0..*" OrderItem : 组合
Order "1" -- "0..*" PaymentRecord : 聚合
Order "1" -- "0..*" RefundApply : 关联

' ========== 体检执行模块关系 ==========
ExamTask "1" *-- "0..*" ExamTaskItem : 组合
ExamTaskItem "1" -- "0..*" ExamResult : 聚合
ExamTaskItem "*" -- "1" ExamDepartmentRoute : 关联

' ========== 报告管理模块关系 ==========
ExamReport "1" *-- "0..*" ExamReportItem : 组合
ExamReport "1" -- "0..*" DoctorReviewRecord : 聚合
ExamReport "*" -- "1" ReportTemplate : 使用模板

' ========== 咨询管理模块关系 ==========
DoctorConsultation "1" *-- "0..*" DoctorConsultationReply : 组合

' ========== 数据分析模块关系 ==========
ReportCompareTask "1" *-- "0..*" ReportCompareResult : 组合
ReportCompareTask "1" -- "0..1" HealthRiskScore : 关联
ReportCompareTask "1" -- "0..*" HealthAdviceRecord : 聚合

' ========== 跨模块关系 ==========
User "1" -- "0..*" Appointment : 创建预约
User "1" -- "0..1" StaffAccount : 关联后台账号

Appointment "0..1" -- "1" Order : 生成订单
Appointment "0..1" -- "1" ExamTask : 生成体检任务
Order "0..*" -- "0..1" ExamTask : 关联体检任务

ExamResult "*" -- "1" ExamReportItem : 录入报告
ExamTask "0..1" -- "1" ExamReport : 生成报告

DoctorConsultation "*" -- "0..1" ExamReport : 关联报告
DoctorConsultation "1" -- "0..*" DoctorConsultationReply : 回复

ReportCompareTask "*" -- "1" ExamReport : 基线报告
ReportCompareTask "*" -- "1" ExamReport : 对比报告

StaffAccount "1" -- "0..*" ExamResult : 医生录入
StaffAccount "1" -- "0..*" DoctorReviewRecord : 医生审核
StaffAccount "1" -- "0..*" DoctorConsultation : 医生回复

@enduml
